# OpsCenter

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  LICENSE_FAQ.md  README.md  cypress.config.js  environment.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: pull_request_template.md
app/: manifest.yml  readme.md
bootstrap/: 000_setup_base_tools.sql  001_schemas_and_roles.sql  002_streamlit.sql  0035_python_tools.sql  0036_sql_tools.sql  003_fake_account_usage.sql  004_labels.sql  005_table_migrations.sql  006_warehouse_credits.sql  007_probes.sql  008_costs.sql  009_crud.sql  009_register.sql  010_helpers.sql  011_warehouse_schedules.sql  012_task_log.sql  013_task_queue.sql  013_warehouse_pools.sql  015_warehouse_views.sql  016_qtag_helpers.sql  016_query_history.sql  017_query_history.sql  018_warehouse_updates.sql  019_query_history_updates.sql  020_warehouse_utilzation.sql  021_external_functions.sql  022_sundeck_views.sql  023_operator_stats.sql  023_simple_materializations.sql  027_user_emails.sql  030_run_as_app.sql  031_sqlglot.sql  032_dbt_sizes.sql  039_reference_management.sql  040_diagnostics.sql  041_quotas.sql  042_utils.sql  043_routines.sql  044_brokers.sql  050_settings.sql  (+7 more)
cypress/: README.md  tsconfig.json
deploy/: cypress_setup.py  cypress_teardown.py  deploy.py  devdeploy.py  devdeploy_backfill.sql  devdeploy_sundeck_sharing.sql  helpers.py  mock_sundeck_sharing.sql  mock_views.sql  opscenter.config  pr_teardown.py  release.py  sundeck_sharing.sql
test/: README.md  common_utils.py  conftest.py
(+129 files in other folders)
