[tool.ruff]
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []
line-length = 120

[tool.poetry]
name = "OpsCenter"
version = "1.3.0"
description = "Free & Open Snowflake-Native Cost Management"
authors = ["Jacques Nadeau <jacques@apache.org>", "Ryan Murray <rymurr@gmail.com>", "Josh Elser <josh@sundeck.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
plotly = "~5.11"
streamlit = "~1.22"
snowflake-snowpark-python = { version = "^1.5.1", extras = ["pandas"] }

[tool.poetry.group.dev.dependencies]
watchdog = "^3.0.0"
pytest = "^7.4.1"
snowflake-connector-python = "^3.1.1"
